force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/cgcloud__Job_Definition_List_Account_Set__c.object-meta.xml
<CustomObject>
    <description>Junction object between Job Definition List and Customer Set.</description>
    <label>Activity Customer Set</label>
    <nameField>
        <displayFormat>JDLCS-{0000}</displayFormat>
        <label>Activity Customer Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Customer Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>