force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/fields/cgcloud__Account_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set__c</fullName>
    <label>Customer Set</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Account_Set__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Account_Set__c</referenceTo>
    <relationshipLabel>Job Definition List Customer Sets</relationshipLabel>
    <relationshipName>Job_Definition_List_Account_Sets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>