force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/fields/cgcloud__Account_Set_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set_Description__c</fullName>
    <formula>cgcloud__Account_Set__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Set Description</label>
    <type>Text</type>
</CustomField>