force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/fields/cgcloud__Account_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set_Name__c</fullName>
    <formula>cgcloud__Account_Set__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Set Name</label>
    <type>Text</type>
</CustomField>