force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/fields/cgcloud__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;Id, /*IMAGE(&quot;/img/func_icons/util/lookup20.gif&quot;, &quot;View&quot;)*/&quot;View&quot;, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>