force-app/main/default/objects/cgcloud__Job_Definition_List_Account_Set__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <description>The Activity Customer Set, Activity and Customer Set must have the same Sales Org.</description>
    <errorConditionFormula>OR (TEXT( cgcloud__Account_Set__r.cgcloud__Sales_Org__c ) &lt;&gt;  TEXT( cgcloud__Job_Definition_List__r.cgcloud__Sales_Org__c ),
TEXT( cgcloud__Sales_Org__c ) &lt;&gt; TEXT( cgcloud__Account_Set__r.cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Activity Customer Set, Activity and Customer Set must have the same Sales Org.</errorMessage>
</ValidationRule>